<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".MainActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_bold"
            android:text="@string/app_name"/>
        <ImageView
            android:id="@+id/filter_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/filter_icon_content_desc"
            android:src="@drawable/filter_icon"
            android:background="@android:color/transparent"/>
    </Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/pokemon1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/granite"
            android:padding="8dp">

            <ImageView
                android:id="@+id/pokemon1_image"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:contentDescription="@string/pokemon_image"
                android:src="@drawable/pokemon1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/pokemon_number"
                android:fontFamily="@font/inter"
                android:text="@string/pokemon_number1"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/pokemon1_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/pokemon1_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/pokemon1_image"
                app:layout_constraintTop_toTopOf="@id/pokemon1_image" />

            <TextView
                android:id="@+id/pokemon1_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/pokemon1_name"
                app:layout_constraintTop_toBottomOf="@id/pokemon1_name"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/inter"
                android:text="@string/pokemon1_desc"
                android:textColor="@color/light_gray"
                android:textSize="16sp"
                android:maxLines="3"
                android:ellipsize="end"/>

            <ImageView
                android:id="@+id/star"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/star_off"
                android:src="@drawable/star_on"
                android:layout_marginEnd="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pokemon1_desc"
                app:layout_constraintEnd_toStartOf="@id/people_stared"/>

            <TextView
                android:id="@+id/people_stared"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@id/pokemon1_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/people_stared_count_selected"
                android:fontFamily="@font/inter"
                android:textColor="@color/yellow_star"
                android:textSize="18sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/pokemon2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/granite"
            android:padding="8dp">

            <ImageView
                android:id="@+id/pokemon2_image"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:contentDescription="@string/pokemon_image"
                android:src="@drawable/pokemon2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/pokemon_number"
                android:fontFamily="@font/inter"
                android:text="@string/pokemon_number2"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/pokemon2_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/pokemon2_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/pokemon2_image"
                app:layout_constraintTop_toTopOf="@id/pokemon2_image" />

            <TextView
                android:id="@+id/pokemon2_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/pokemon2_name"
                app:layout_constraintTop_toBottomOf="@id/pokemon2_name"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/inter"
                android:text="@string/pokemon2_desc"
                android:textColor="@color/light_gray"
                android:textSize="16sp"
                android:maxLines="3"
                android:ellipsize="end"/>

            <ImageView
                android:id="@+id/star2"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/star_off"
                android:src="@drawable/star_off"
                android:layout_marginEnd="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pokemon2_desc"
                app:layout_constraintEnd_toStartOf="@id/people_stared2"/>

            <TextView
                android:id="@+id/people_stared2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@id/pokemon2_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/people_stared_count"
                android:fontFamily="@font/inter"
                android:textColor="@color/yellow_star"
                android:textSize="18sp"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/pokemon3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/granite"
            android:padding="8dp">

            <ImageView
                android:id="@+id/pokemon3_image"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:contentDescription="@string/pokemon_image"
                android:src="@drawable/pokemon3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/pokemon_number"
                android:fontFamily="@font/inter"
                android:text="@string/pokemon_number3"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/pokemon3_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/pokemon3_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/pokemon3_image"
                app:layout_constraintTop_toTopOf="@id/pokemon3_image" />

            <TextView
                android:id="@+id/pokemon3_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/pokemon3_name"
                app:layout_constraintTop_toBottomOf="@id/pokemon3_name"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/inter"
                android:text="@string/pokemon3_desc"
                android:textColor="@color/light_gray"
                android:textSize="16sp"
                android:maxLines="3"
                android:ellipsize="end"/>

            <ImageView
                android:id="@+id/star3"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/star_off"
                android:src="@drawable/star_off"
                android:layout_marginEnd="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pokemon3_desc"
                app:layout_constraintEnd_toStartOf="@id/people_stared3"/>

            <TextView
                android:id="@+id/people_stared3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@id/pokemon3_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/people_stared_count"
                android:fontFamily="@font/inter"
                android:textColor="@color/yellow_star"
                android:textSize="18sp"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/pokemon4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/granite"
            android:padding="8dp">

            <ImageView
                android:id="@+id/pokemon4_image"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:contentDescription="@string/pokemon_image"
                android:src="@drawable/pokemon4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/pokemon_number"
                android:fontFamily="@font/inter"
                android:text="@string/pokemon_number4"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/pokemon4_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/pokemon4_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/pokemon4_image"
                app:layout_constraintTop_toTopOf="@id/pokemon4_image" />

            <TextView
                android:id="@+id/pokemon4_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/pokemon4_name"
                app:layout_constraintTop_toBottomOf="@id/pokemon4_name"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/inter"
                android:text="@string/pokemon4_desc"
                android:textColor="@color/light_gray"
                android:textSize="16sp"
                android:maxLines="3"
                android:ellipsize="end"/>

            <ImageView
                android:id="@+id/star4"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/star_off"
                android:src="@drawable/star_off"
                android:layout_marginEnd="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pokemon4_desc"
                app:layout_constraintEnd_toStartOf="@id/people_stared4"/>

            <TextView
                android:id="@+id/people_stared4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@id/pokemon4_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/people_stared_count"
                android:fontFamily="@font/inter"
                android:textColor="@color/yellow_star"
                android:textSize="18sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>



